Tests/DependencyInjection/Fixtures/annotations/inject/invalid/invalid1/FooClass.php
<?php
/** @Service */
class FooClassInvalid1
{
    /** @Inject({"foo", "bar"}) */
    public function setDependencies($fooService)
    {
    }
}
